# overlord-backend

./: .gitignore  LICENSE  build.py  build.sh  compose.yaml  deploy.sh  run.sh
.github/workflows/: overlord-pipeline.yml
config/: compose.yaml  envoy.yaml  overlord.env
deploy-scripts/config/: compose.yaml
lib/: build.sh  pyproject.toml
lib/proto/: api-gateway.proto  device-gateway.proto  device.proto  log-server.proto  ping.proto  stats.proto  yeelight-connector.proto
lib/src/overlord/: __init__.py  cfg.py  interceptor.py  log.py
lib/src/overlord/proto/: __init__.py  pinger.py
scripts/: pull-containers.sh
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/src/: main.py
services/api-gateway/src/api/: __init__.py  device.py  log_server.py  stats.py
services/api-gateway/src/stats/: __init__.py  service.py  statistics_collector.py  statistics_proxy.py
services/device-gateway/: Dockerfile
services/device-gateway/src/: api.py  main.py
services/log-server/: Dockerfile  main.py  requirements.txt
services/log-server/src/: grpc_api.py  log_api.py  main.py  utils.py
services/mi-proxy/: Dockerfile  requirements.txt
services/mi-proxy/src/: api.py  main.py
services/web/: Dockerfile  package.json
services/web/src/: App.js
services/web/src/dashboard/: Dashboard.js
services/yeelight-connector/: Dockerfile  requirements.txt  spawn.sh
services/yeelight-connector/src/: api.py  bulb_manager.py  main.py
services/yeelight-connector/src/event/: __init__.py  event_consumer.py  event_manager.py  event_producer.py
(+17 files in other folders)
